# Library

./: .env.example  .gitignore  README.md  requirements.txt  快速启动.bat
.github/workflows/: ci.yml  release.yml
app/: .gitignore  README.md  fix_tests.py  index.html  package-lock.json  package.json  vitest.config.ts
app/src/: App.module.css  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/migrations/: 001_foundation.sql
app/src-tauri/src/: agent.rs  commands.rs  error.rs  events.rs  lib.rs  models.rs  ocr.rs  parser.rs  runtime.rs  state.rs  vision.rs
app/src-tauri/src/scanner/: mod.rs
app/src-tauri/src/storage/: sqlite.rs
app/src-tauri/src/vector/: lancedb_store.rs  mod.rs
app/src/__tests__/: App.test.tsx
app/src/components/: SettingsModal.tsx
app/src/components/Select/: Select.module.css  (+1 more)
app/src/data/: emptyWorkbench.ts  mockWorkbench.ts
app/src/hooks/: useRuntimeStatus.test.tsx  useRuntimeStatus.ts  useWorkbenchSnapshot.test.ts  useWorkbenchSnapshot.ts
app/src/lib/: tauriClient.test.ts  tauriClient.ts
app/src/styles/: global.css  tokens.css
app/src/types/: workbench.ts
docs/: ci-cd.md
fixtures/ocr/: README.md
scripts/: 下载OCR模型.ps1  下载Vision模型.ps1  检查OCR环境.ps1
sidecars/: requirements.txt
sidecars/ocr/: README.md  check_ocr_environment.py  ocr_sidecar.py  requirements-dev.txt  requirements.txt  test_check_ocr_environment.py  test_ocr_sidecar.py
sidecars/parser/: README.md  parser_sidecar.py  requirements.txt  test_parser_sidecar.py
sidecars/vision/: requirements.txt  test_vision_sidecar.py  vision_sidecar.py
(+15 files in other folders)
