[package]
name = "app"
version = "0.1.0"
description = "Personal knowledge base desktop app"
authors = ["Sakura_Cianna"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
time = { version = "0.3.49", features = ["serde", "formatting", "parsing"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
walkdir = "2.5.0"
blake3 = "1.8.5"
lancedb = "0.30.0"
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tauri-plugin-dialog = "2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
zip = "6.0.0"

[dev-dependencies]
tempfile = "3.27.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
